k8s/apps/kube-system/kubernetes-dashboard/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
spec:
  hostnames:
    - kubernetes.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  rules:
    - backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
      matches:
        - path:
            type: PathPrefix
            value: /
